--- a/bsp/stm3210/Libraries/SConscript
+++ b/bsp/stm3210/Libraries/SConscript
@@ -3,8 +3,8 @@ Import('RTT_ROOT')
 
 # The set of source files associated with this SConscript file.
 src_local = Split("""
-CMSIS/Core/CM3/core_cm3.c
-CMSIS/Core/CM3/system_stm32f10x.c
+CMSIS/CM3/CoreSupport/core_cm3.c
+CMSIS/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.c
 STM32F10x_StdPeriph_Driver/src/stm32f10x_crc.c
 STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c
 STM32F10x_StdPeriph_Driver/src/stm32f10x_wwdg.c
@@ -29,7 +29,9 @@ STM32F10x_StdPeriph_Driver/src/stm32f10x_can.c
 STM32F10x_StdPeriph_Driver/src/misc.c
 """)
 
-path = [RTT_ROOT + '/bsp/stm3210/Libraries/STM32F10x_StdPeriph_Driver/inc', RTT_ROOT + '/bsp/stm3210/Libraries/CMSIS/Core/CM3']
+path = [RTT_ROOT + '/bsp/stm3210/Libraries/STM32F10x_StdPeriph_Driver/inc', 
+	RTT_ROOT + '/bsp/stm3210/Libraries/CMSIS/CM3/CoreSupport',
+	RTT_ROOT + '/bsp/stm3210/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x']
 
 env.Append(CPPPATH = path)
 
