--- a/rtgui/SConscript
+++ b/rtgui/SConscript
@@ -40,6 +40,7 @@ widgets/container.c
 widgets/iconbox.c
 widgets/label.c
 widgets/progressbar.c
+widgets/scrollbar.c
 widgets/radiobox.c
 widgets/slider.c
 widgets/staticline.c
