--- a/bsp/mini2440/SConstruct
+++ b/bsp/mini2440/SConstruct
@@ -14,10 +14,12 @@ env = Environment(tools = ['mingw'],
 	LINK = rtconfig.LINK, LINKFLAGS = rtconfig.LFLAGS)
 env.PrependENVPath('PATH', rtconfig.EXEC_PATH)
 env.AppendUnique(CPPPATH = bsp_path)
+projects = []
 
 Export('env')
 Export('RTT_ROOT')
 Export('rtconfig')
+Export('projects')
 
 objs = SConscript(RTT_ROOT + '/src/SConscript', variant_dir='build/src', duplicate=0)
 objs = objs + SConscript(RTT_ROOT + '/libcpu/SConscript', variant_dir='build/libcpu', duplicate=0)
